--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "^3.0.0-rc.6"
+    "nuxt": "^3.0.0-rc.6",
+    "sitemap": "^7.1.1"
   },
   "dependencies": {
     "@chenfengyuan/vue-countdown": "^2.0.0",
