--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pinia": "^2.0.16",
     "pinia-plugin-persistedstate-2": "^1.0.1",
     "vee-validate": "^4.6.2",
+    "vue-gtag": "^2.0.1",
     "yup": "^0.32.11"
   }
 }
