--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pinia-plugin-persistedstate-2": "^1.0.1",
     "vee-validate": "^4.6.2",
     "vue-gtag": "^2.0.1",
+    "vue-gtag-next": "^1.14.0",
     "yup": "^0.32.11"
   }
 }
