--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "^3.0.0-rc.6"
+    "@intlify/unplugin-vue-i18n": "^0.5.0",
+    "nuxt": "^3.0.0-rc.6",
+    "vue-i18n": "^9.2.2"
   },
   "dependencies": {
     "@chenfengyuan/vue-countdown": "^2.0.0",
